# pcc_crawler

./: .env  .gitignore  crawled_items.xlsx  db_manager.py  example.db  excel_tool.py  item_main.py  list_main.py  pyproject.toml  requirements.txt  send_mail.py  tg_send_tool.py
doc/: 昶技歷年得標 (version 1).xlsm
